--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,11 +14,11 @@
     <div class="row">
       <div class="col-sm-4">
         <div class="thumbnail">
-          <div class="caption text-center" onclick="location.href='https://flow.microsoft.com/en-us/connectors/shared_slack/slack/'">
+          <div class="caption text-center" >
             <div class="position-relative">
               <img src="https://az818438.vo.msecnd.net/icons/slack.png" style="width:72px;height:72px;" />
             </div>
-            <h4 id="thumbnail-label"><a href="https://flow.microsoft.com/en-us/connectors/shared_slack/slack/" target="_blank">Proyecto 1</a></h4>
+            <h4 id="thumbnail-label"><a href="<%= project_show_path %>"">Proyecto 1</a></h4>
             <p><i class="glyphicon glyphicon-user light-red lighter bigger-120"></i>&nbsp;Usuario</p>
             <div class="thumbnail-description smaller">Este es un proyecto de investigación</div>
           </div>
@@ -33,11 +33,11 @@
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <div class="caption text-center" onclick="location.href='https://flow.microsoft.com/en-us/connectors/shared_slack/slack/'">
+          <div class="caption text-center" >
             <div class="position-relative">
               <img src="https://az818438.vo.msecnd.net/icons/slack.png" style="width:72px;height:72px;" />
             </div>
-            <h4 id="thumbnail-label"><a href="https://flow.microsoft.com/en-us/connectors/shared_slack/slack/" target="_blank">Proyecto 2</a></h4>
+            <h4 id="thumbnail-label"><a href="<%= project_show_path %>"">Proyecto 2</a></h4>
             <p><i class="glyphicon glyphicon-user light-red lighter bigger-120"></i>&nbsp;Usuario</p>
             <div class="thumbnail-description smaller">Este es un proyecto de investigación</div>
           </div>
@@ -52,11 +52,11 @@
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <div class="caption text-center" onclick="location.href='https://flow.microsoft.com/en-us/connectors/shared_slack/slack/'">
+          <div class="caption text-center" >
             <div class="position-relative">
               <img src="https://az818438.vo.msecnd.net/icons/slack.png" style="width:72px;height:72px;" />
             </div>
-            <h4 id="thumbnail-label"><a href="https://flow.microsoft.com/en-us/connectors/shared_slack/slack/" target="_blank">Proyecto 3</a></h4>
+            <h4 id="thumbnail-label"><a href="<%= project_show_path %>"">Proyecto 3</a></h4>
             <p><i class="glyphicon glyphicon-user light-red lighter bigger-120"></i>&nbsp;Usuario</p>
             <div class="thumbnail-description smaller">Este es un proyecto de investigación</div>
           </div>
