--- a/app/views/project/new.html.erb
+++ b/app/views/project/new.html.erb
@@ -6,8 +6,10 @@
     Crear un nuevo proyecto de investigación
 <% end %>
 
-<div class='row'>
-    <div class='col-md-6 offset-md-3'>
+<div class='row' style='width: 100%'>
+<div class='col-md-3'>
+    </div>
+    <div class='col-md-6'>
         <form>
             <div class="form-group">
                 <label for="exampleInputEmail1">Nombre</label>
@@ -31,5 +33,7 @@
             </div>
             <button type="submit" class="btn btn-primary">Crear</button>
         </form>
+    </div>
+    <div class='col-md-3'>
     </div>
 </div>
