view all projects

--- a/app/views/base/_sidebar.html.erb
+++ b/app/views/base/_sidebar.html.erb
@@ -32,6 +32,7 @@
         <li class="header">HEADER</li>
         <!-- Optionally, you can add icons to the links -->
         <li class="active"><a href="<%= root_path %>"><i class="fa fa-solid fa-file"></i> <span>Mis Proyectos</span></a></li>
+        <li class="active"><a href="<%= project_all_path %>"><i class="fa fa-solid fa-file"></i> <span>Explorar Proyectos</span></a></li>
         <li class='sidebar-button'><a href="<%= project_new_path %>"><i class="fa fa-solid fa-plus"></i> <span>Crear Proyecto</span></a></li>
       </ul>
       <!-- /.sidebar-menu -->
